Feature/remove unused packages (#2)
* refactor(payment): remove stripe publishable key and client-side integration

remove unused stripe dependencies and client-side integration
update font fallbacks and add chinese font optimization

* feat(payment): add purchase confirmation dialog with test payment warning

Implement a confirmation dialog that appears before payment to warn users about test payments
Add translations for both English and Chinese
Include test card number and warning messages to prevent real payments

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -110,7 +110,17 @@
     "yearly": "Yearly",
     "processingText": "Processing...",
     "getStartedText": "Get Started",
-    "purchaseText": "Purchase"
+    "purchaseText": "Purchase",
+    "purchaseDialog": {
+      "title": "Test Payment Notice",
+      "description": "better-saas is an open-source and free software. Please use the test card number 5555555555554444 for payment testing. Do not make real payments.",
+      "testCardNumber": "Test Card Number: 5555555555554444",
+      "warning": "⚠️ This is for testing purposes only",
+      "continueButton": "Continue to Payment",
+      "cancelButton": "Cancel",
+      "purchaseInfo": "You are about to purchase: {planName}",
+      "processing": "Processing..."
+    }
   },
   "techstack": {
     "heading": "Build With Modern Stack",
